# 21sh

./: #file.txt#  21sh  CMakeLists.txt  Makefile  Makefile~  auteur  file.txt  file.txt~  lol  main.c  minishell  pipe.c
21sh.dSYM/Contents/Resources/DWARF/: 21sh
help/: alias.help  cd.help  echo.help  env.help  export.help  help.help  history.help  keymap.help  set.help  setenv.help  unalias.help  unset.help  unsetenv.help
include/: error.h  error.h~  shell.h  shell.h~  terms.h
minishell.dSYM/Contents/Resources/DWARF/: minishell
sources/: #ft_init.c#  .#ft_init.c  ft_access.c  ft_alias.c  ft_alias_init.c  ft_builtins.c  ft_chdir.c  ft_chdir_cdpath.c  ft_chdir_opt.c  ft_chdir_tools.c  ft_chdir_trim.c  ft_check_syntax.c  ft_completion.c  ft_completion.c~  ft_completion_norme.c  ft_completion_tools.c  ft_delchar.c  ft_echo.c  ft_env.c  ft_error.c  ft_exec.c  ft_exec_child.c  ft_exec_init.c  ft_export.c  ft_free.c  ft_gestion_error.c  ft_gestion_error_redir.c  ft_help.c  ft_hist_find.c  ft_hist_str.c  ft_history.c  ft_history_builtin.c  ft_history_tools.c  ft_init.c  ft_init.c~  ft_keymap.c  ft_keymap_tools.c  ft_main.c  ft_main.c~  ft_parsing.c  (+45 more)
termcaps/: Makefile  create.c  main.c  my_aff.c  my_free.c  my_ls.c  my_select.c  qsort.c  recup_ligne.c  totab.c
termcaps/include/: my.h
termcaps/sources/: my_getnbr.c  my_putchar.c  my_putnbr.c  my_putstr.c  my_read.c  my_revnbr.c  my_strlen.c  my_write.c
unicode/: a.out  ft_esc.h  ft_evaluator.c  main.c
unicode/libft/: Makefile
unicode/libft/includes/: ft_btree.h  ft_is.h  ft_lst.h  ft_mem.h  ft_put.h  ft_str.h  get_next_line.h  libft.h
unicode/libft/sources/: ft_atoi.c  ft_itoa.c  ft_match.c  ft_tolower.c  ft_toupper.c  get_next_line.c
unicode/libft/sources/btree/: btree_apply_infix.c  btree_apply_prefix.c  btree_apply_suffix.c  btree_create_node.c  btree_insert_data.c  btree_search_item.c
unicode/libft/sources/ft_is/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_isprint.c  ft_iswspace.c
unicode/libft/sources/ft_lst/: ft_del.c  ft_lstadd.c  ft_lstadd_ascii.c  ft_lstadd_end.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstswap.c
unicode/libft/sources/ft_mem/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
unicode/libft/sources/ft_put/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
unicode/libft/sources/ft_str/: ft_strcat.c  ft_strchr.c  ft_strcjoin.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c
