cmake_minimum_required(VERSION 3.6)
project(21sh)

set(CMAKE_CXX_STANDARD 11)

include_directories(include)
include_directories(library/include)

set(SOURCE_FILES
        include/error.h
        include/shell.h
        include/terms.h
        library/Btree/btree_add_node.c
        library/Btree/btree_apply_infix.c
        library/Btree/btree_apply_prefix.c
        library/Btree/btree_apply_suffix.c
        library/Btree/btree_create_node.c
        library/Btree/btree_insert_data.c
        library/GetNextLine/get_next_line.c
        library/include/ft_esc.h
        library/include/get_next_line.h
        library/include/libft.h
        library/List/ft_create_elem.c
        library/List/ft_list_at.c
        library/List/ft_list_clear.c
        library/List/ft_list_del.c
        library/List/ft_list_foreach.c
        library/List/ft_list_last.c
        library/List/ft_list_push_back.c
        library/List/ft_list_push_front.c
        library/List/ft_list_push_params.c
        library/List/ft_list_reverse.c
        library/List/ft_list_size.c
        library/List/ft_list_sort.c
        library/Part_1/ft_atoi.c
        library/Part_1/ft_isalnum.c
        library/Part_1/ft_isalpha.c
        library/Part_1/ft_isascii.c
        library/Part_1/ft_isdigit.c
        library/Part_1/ft_ishex.c
        library/Part_1/ft_isoct.c
        library/Part_1/ft_isprint.c
        library/Part_1/ft_memset.c
        library/Part_1/ft_strchr.c
        library/Part_1/ft_strcmp.c
        library/Part_1/ft_strcmp_case.c
        library/Part_1/ft_strdup.c
        library/Part_1/ft_strlchr.c
        library/Part_1/ft_strlen.c
        library/Part_1/ft_strncmp.c
        library/Part_1/ft_strnstr.c
        library/Part_1/ft_strrchr.c
        library/Part_1/ft_strstr.c
        library/Part_1/ft_tolower.c
        library/Part_1/ft_toupper.c
        library/Part_2/ft_esc_hex.c
        library/Part_2/ft_eval_esc.c
        library/Part_2/ft_evaluator.c
        library/Part_2/ft_explode.c
        library/Part_2/ft_itoa.c
        library/Part_2/ft_memalloc.c
        library/Part_2/ft_memdel.c
        library/Part_2/ft_putchar.c
        library/Part_2/ft_putchar_fd.c
        library/Part_2/ft_putendl.c
        library/Part_2/ft_putendl_fd.c
        library/Part_2/ft_putnbr.c
        library/Part_2/ft_putnbr_fd.c
        library/Part_2/ft_putstr.c
        library/Part_2/ft_putstr_fd.c
        library/Part_2/ft_revnbr.c
        library/Part_2/ft_revstr.c
        library/Part_2/ft_strclr.c
        library/Part_2/ft_strdel.c
        library/Part_2/ft_strequ.c
        library/Part_2/ft_striter.c
        library/Part_2/ft_striteri.c
        library/Part_2/ft_strjoin.c
        library/Part_2/ft_strmap.c
        library/Part_2/ft_strmapi.c
        library/Part_2/ft_strnequ.c
        library/Part_2/ft_strnew.c
        library/Part_2/ft_strsplit.c
        library/Part_2/ft_strsub.c
        library/Part_2/ft_strtrim.c
        library/Part_2/ft_tablen.c
        sources/ft_access.c
        sources/ft_alias.c
        sources/ft_builtins.c
        sources/ft_chdir.c
        sources/ft_chdir_cdpath.c
        sources/ft_chdir_opt.c
        sources/ft_chdir_tools.c
        sources/ft_chdir_trim.c
        sources/ft_completion.c
        sources/ft_completion_norme.c
        sources/ft_completion_tools.c
        sources/ft_delchar.c
        sources/ft_echo.c
        sources/ft_env.c
        sources/ft_error.c
        sources/ft_exec.c
        sources/ft_exec_child.c
        sources/ft_exec_init.c
        sources/ft_export.c
        sources/ft_free.c
        sources/ft_gestion_error.c
        sources/ft_hist_find.c
        sources/ft_hist_str.c
        sources/ft_history.c
        sources/ft_history_builtin.c
        sources/ft_history_tools.c
        sources/ft_init.c
        sources/ft_keymap.c
        sources/ft_keymap_tools.c
        sources/ft_main.c
        sources/ft_parsing.c
        sources/ft_parsing_cmd.c
        sources/ft_parsing_init.c
        sources/ft_parsing_node.c
        sources/ft_parsing_parenthesis.c
        sources/ft_parsing_split.c
        sources/ft_parsing_split_tools.c
        sources/ft_parsing_tools.c
        sources/ft_path.c
        sources/ft_prompt.c
        sources/ft_prompt_path.c
        sources/ft_read.c
        sources/ft_read_copy.c
        sources/ft_read_move.c
        sources/ft_read_print.c
        sources/ft_set.c
        sources/ft_setenv.c
        sources/ft_shell.c
        sources/ft_shell_excl.c
        sources/ft_shell_norme.c
        sources/ft_shell_shrc.c
        sources/ft_signal.c
        sources/ft_sys.c
        sources/ft_unalias.c
        sources/ft_unset.c
        sources/ft_unset_tools.c
        sources/ft_unsetenv.c
        sources/ft_varenv.c
        sources/match.c
        unicode/libft/includes/ft_btree.h
        unicode/libft/includes/ft_is.h
        unicode/libft/includes/ft_lst.h
        unicode/libft/includes/ft_mem.h
        unicode/libft/includes/ft_put.h
        unicode/libft/includes/ft_str.h
        unicode/libft/includes/get_next_line.h
        unicode/libft/includes/libft.h
        unicode/libft/sources/btree/btree_apply_infix.c
        unicode/libft/sources/btree/btree_apply_prefix.c
        unicode/libft/sources/btree/btree_apply_suffix.c
        unicode/libft/sources/btree/btree_create_node.c
        unicode/libft/sources/btree/btree_insert_data.c
        unicode/libft/sources/btree/btree_search_item.c
        unicode/libft/sources/ft_is/ft_isalnum.c
        unicode/libft/sources/ft_is/ft_isalpha.c
        unicode/libft/sources/ft_is/ft_isascii.c
        unicode/libft/sources/ft_is/ft_isblank.c
        unicode/libft/sources/ft_is/ft_isdigit.c
        unicode/libft/sources/ft_is/ft_ishex.c
        unicode/libft/sources/ft_is/ft_isoct.c
        unicode/libft/sources/ft_is/ft_isprint.c
        unicode/libft/sources/ft_is/ft_iswspace.c
        unicode/libft/sources/ft_lst/ft_del.c
        unicode/libft/sources/ft_lst/ft_lstadd.c
        unicode/libft/sources/ft_lst/ft_lstadd_ascii.c
        unicode/libft/sources/ft_lst/ft_lstadd_end.c
        unicode/libft/sources/ft_lst/ft_lstdel.c
        unicode/libft/sources/ft_lst/ft_lstdelone.c
        unicode/libft/sources/ft_lst/ft_lstiter.c
        unicode/libft/sources/ft_lst/ft_lstmap.c
        unicode/libft/sources/ft_lst/ft_lstnew.c
        unicode/libft/sources/ft_lst/ft_lstswap.c
        unicode/libft/sources/ft_mem/ft_bzero.c
        unicode/libft/sources/ft_mem/ft_memalloc.c
        unicode/libft/sources/ft_mem/ft_memccpy.c
        unicode/libft/sources/ft_mem/ft_memchr.c
        unicode/libft/sources/ft_mem/ft_memcmp.c
        unicode/libft/sources/ft_mem/ft_memcpy.c
        unicode/libft/sources/ft_mem/ft_memdel.c
        unicode/libft/sources/ft_mem/ft_memmove.c
        unicode/libft/sources/ft_mem/ft_memset.c
        unicode/libft/sources/ft_put/ft_putchar.c
        unicode/libft/sources/ft_put/ft_putchar_fd.c
        unicode/libft/sources/ft_put/ft_putendl.c
        unicode/libft/sources/ft_put/ft_putendl_fd.c
        unicode/libft/sources/ft_put/ft_putnbr.c
        unicode/libft/sources/ft_put/ft_putnbr_fd.c
        unicode/libft/sources/ft_put/ft_putstr.c
        unicode/libft/sources/ft_put/ft_putstr_fd.c
        unicode/libft/sources/ft_str/ft_strcat.c
        unicode/libft/sources/ft_str/ft_strchr.c
        unicode/libft/sources/ft_str/ft_strcjoin.c
        unicode/libft/sources/ft_str/ft_strclr.c
        unicode/libft/sources/ft_str/ft_strcmp.c
        unicode/libft/sources/ft_str/ft_strcpy.c
        unicode/libft/sources/ft_str/ft_strdel.c
        unicode/libft/sources/ft_str/ft_strdup.c
        unicode/libft/sources/ft_str/ft_strequ.c
        unicode/libft/sources/ft_str/ft_striter.c
        unicode/libft/sources/ft_str/ft_striteri.c
        unicode/libft/sources/ft_str/ft_strjoin.c
        unicode/libft/sources/ft_str/ft_strlcat.c
        unicode/libft/sources/ft_str/ft_strlen.c
        unicode/libft/sources/ft_str/ft_strmap.c
        unicode/libft/sources/ft_str/ft_strmapi.c
        unicode/libft/sources/ft_str/ft_strncat.c
        unicode/libft/sources/ft_str/ft_strncmp.c
        unicode/libft/sources/ft_str/ft_strncpy.c
        unicode/libft/sources/ft_str/ft_strnequ.c
        unicode/libft/sources/ft_str/ft_strnew.c
        unicode/libft/sources/ft_str/ft_strnstr.c
        unicode/libft/sources/ft_str/ft_strrchr.c
        unicode/libft/sources/ft_str/ft_strsplit.c
        unicode/libft/sources/ft_str/ft_strstr.c
        unicode/libft/sources/ft_str/ft_strsub.c
        unicode/libft/sources/ft_str/ft_strtrim.c
        unicode/libft/sources/ft_atoi.c
        unicode/libft/sources/ft_itoa.c
        unicode/libft/sources/ft_match.c
        unicode/libft/sources/ft_tolower.c
        unicode/libft/sources/ft_toupper.c
        unicode/libft/sources/get_next_line.c
        unicode/ft_esc.h
        unicode/ft_esc_hex.c
        unicode/ft_eval_esc.c
        unicode/ft_evaluator.c
        unicode/main.c sources/ft_help.c sources/ft_alias_init.c sources/ft_parsing_semicolon.cpp)

add_executable(21sh ${SOURCE_FILES})